tests/custom/STARIS_2022/operation-type-errors/freq-type-error/stderr.expected
Error:
    freq-type-error.essence:2:21:
  |
2 | such that b = (freq(1, false) = 0)
  |                     ^
Type error:
	Expected: matrix indexed by [int] of bool
	Got: int

